# Lotto-Winning-Combination

./: .gitignore  15e80ddb-0f14-48e2-a7e5-95e1c131c6e5.html  LottoResult.py  current_day_extract.py  databasemanager.py  db_to_csv.py  db_to_pdf.py  docker-compose.yml  download.py  download_from_db.py  env.example  extract  extract.py  extract_previous.py  init_db.py  pcso_20240821.html  pcso_20240822.html  pcso_result_('February', datetime.date(2024, 2, 1), '2024')_('February', datetime.date(2024, 2, 29), '2024')  pyproject.toml  requirements.txt  transactions.csv  upload_data_auto.py  workspace.yaml
dagster_home/.telemetry/: id.yaml
dagster_home/history/: runs.db
dagster_home/history/runs/: 0af7beef-8077-49aa-b3e1-2e4e52c568ac.db  0c10f1c7-8026-493e-b7a4-3dcb9ca36ba9.db  1007b48d-e811-460c-8ca7-6c0ad7db2e85.db  16db8e44-83a7-450c-aa6c-81ad2a0e7358.db  1840c2e3-47c6-4358-b844-1e790473976e.db  1fbb289f-fa00-482d-815f-ce80bce939dd.db  29a6d994-a12e-4112-a993-a8f76fdec4dd.db  3742df89-998e-4f3d-9d3e-d80bbe9242db.db  3d355fbc-bab8-4ee0-ae29-5b9731442273.db  4136700a-4cb7-4293-94d3-f8ee036101c1.db  418fdace-fd04-406d-a2ae-22104662f42f.db  5757a3da-4ff8-4f49-8d18-98cbb34411ad.db  576843a9-ff21-4b72-9a47-997d9021988f.db  71f611ab-95aa-44f5-8605-8e4cbd74add9.db  index.db  (+13 more)
dagster_home/schedules/: schedules.db
dagster_home/storage/: table_initialization
data/draft/: download1.py
data/html/: pcso_20240912.html  pcso_20250604.html
draft/: LottoResult  select_from_db.py
html/: pcso_20240827.html  pcso_20240828.html
src/lotto_project/: Dockerfile  definitions.py
(+46 files in other folders)
