[project]
name = "pcso-lotto-numbers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "dagster>=1.10.19",
    "dagster-webserver>=1.10.19",
    "playwright>=1.52.0",
    "psycopg[binary]>=3.2.9",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.41",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",  # or flake8/black if you prefer
    "mypy"
]


[tool.uv.scripts]
postinstall = "python -m playwright install --with-deps"